objects/Reservable_View__c.object
<CustomObject>
    <fields>
        <fullName>Available_From__c</fullName>
        <description>This field stores the date from which the unit is available</description>
        <inlineHelpText>This field stores the date from which the unit is available</inlineHelpText>
        <label>Available From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buildings__c</fullName>
        <label>Buildings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Stores the City</description>
        <label>City</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Pending_Contract__c</fullName>
        <label>Include Pending Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Price_Range__c</fullName>
        <label>Maximum Price Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Capacity__c</fullName>
        <label>Minimum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Price_Range__c</fullName>
        <label>Minimum Price Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Only_for_me__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked If saved view is restricted to owner use only.</description>
        <label>Only for me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Records__c</fullName>
        <label>Show Records</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shared Office Desk</fullName>
                </value>
                <value>
                    <fullName>HotDeskArea</fullName>
                </value>
                <value>
                    <fullName>DedicatedDesk</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>HotDesk</fullName>
                </value>
                <value>
                    <fullName>ResidentialUnit</fullName>
                </value>
                <value>
                    <fullName>Bed</fullName>
                </value>
                <value>
                    <fullName>SharedOfficeDesk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>View settings of Reservable screen presets will be stored here.</description>
    <label>Reservable View</label>
    <nameField>
        <label>ReservableViews Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReservableViews</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>